
	* Implemented guild BBS.

2013-03-10  GoldenKevin  (revision 209)

	* Sacrifice and Dragon Roar behave exactly as expected.
	* Do not continuously lose EXP when losing HP (e.g. HP decreasing regions
	such as El Nath or Aqua Road) while already dead.
	* Prevent potion or skill use while player is dead.
	* Added !queststatus command.

2013-03-13  GoldenKevin  (revision 210)

	* Fixed Combo Attack, Panic, and Coma.
	* Fixed characters being unable to do certain activities after dropping
	mesos.

2013-04-08  GoldenKevin  (revision 211)

	* Selling nonexistent items now counts as only POSSIBLE_PACKET_EDITING
	rather than CERTAIN_PACKET_EDITING due to false positives.
	* Fixed Puppet skill state being transferred by PlayerContinuation when
	changing channels.
	* Started implementing Mystic Door. Only works properly when Priest is not
	in a party.
	* Optimized party HP pushing/pulling when logging into a character that is
	in a party and when joining a party.

2013-07-21  GoldenKevin  (revision 212)

	* Fully implemented Mystic Door for players not in a party.
	* Implemented fully functional Mystic Door for parties, with visual glitches
	(i.e. doors in towns are duplicated and misplaced and warp players to a
	wrong location in the map that the skill was cast in).

2013-07-21  GoldenKevin  (revision 213)

	* Fixed wrong initial position when player changes maps by entering a
	portal, causing them to appear to fly across the map to players in the
	destination map.
	* Fixed all issues with duplicate Mystic Doors, wrong warp positions when
	using a door, and wrong placement of Mystic Doors in towns.
	* Fixed leader's name not appearing above preexisting Mystic Door in a town
	when creating a new party.
	* Added missing locks in MysticDoor.open and MysticDoor.close.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.